arregla diseño de pagina productos en cliente
